[BUILD-CORE]: Done Scaffold rest api
