# src/presentation/api/v1/input-schemas/post/create-post.input-schema.ts
@@ -1,0 +1,10 @@
+import { MongooseBaseObjectSchema } from '@infrastructure/mongoose';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class CreatePostInputSchema extends MongooseBaseObjectSchema {
+  @ApiProperty({
+    description: 'Name of Post',
+    example: 'Name',
+  })
+  name!: string;
+}
