# src/presentation/api/v1/input-schemas/post/update-post.input-schema.ts
@@ -1,0 +1,10 @@
+import { MongooseBaseObjectSchema } from '@infrastructure/mongoose';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class UpdatePostInputSchema extends MongooseBaseObjectSchema {
+  @ApiProperty({
+    description: 'Name of Post',
+    example: 'Name',
+  })
+  name!: string;
+}
