# src/presentation/api/v1/object-schemas/post/post.object-schema.ts
@@ -1,0 +1,10 @@
+import { MongooseBaseObjectSchema } from '@infrastructure/mongoose';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class PostObjectSchema extends MongooseBaseObjectSchema {
+  @ApiProperty({
+    description: 'Name of Post',
+    example: 'Name',
+  })
+  name!: string;
+}
